@@ -1,3 +1,12 @@
+2025-05-05T00:57:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14826996143 # 634
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-05
+* notice: last 14d: unq all: 3 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 523 916 / 535 928
+* notice: next accum: outdated-unq outdated-all / unq all: 524 917 / 536 929
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-04-20] / [2025-05-04]
+
 2025-05-04T00:59:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14816190536 # 633
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-04
